--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -3,3 +3,11 @@
   <p>We hope you find exactly the car you're looking for.</p>
   <LinkTo @route="about" class="button">About Us</LinkTo>
 </Jumbo>
+
+<div class="rentals">
+  <ul class="results">
+    <li><Rental /></li>
+    <li><Rental /></li>
+    <li><Rental /></li>
+  </ul>
+</div>
